live update orders

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -24,5 +24,5 @@
 </table>
 
 <%= link_to "繼續選購", "/foods?serial_number=#{params[:serial_number]}" %>
-<%= link_to "結帳", orders_path({desk_id: @desk.id, items: current_cart.items}), method: "post" %>
+<%= link_to "結帳", orders_path({desk_id: @desk.id, items: @items}), method: "post" %>
 <%= link_to '清空購物車', cart_path({serial_number: params[:serial_number]}), method: :delete, data: {confirm: "確定清空購物車？"} %>
