--- a/app/views/stores/edit.html.erb
+++ b/app/views/stores/edit.html.erb
@@ -1,5 +1,5 @@
 <%= render "shared/storenavbar", store: @store %>
 
-<h1 class="py-10 font-mono text-5xl font-bold text-center">Edit Store</h1>
+<h1 class="mt-12 py-10 font-mono text-5xl font-bold text-center">Edit Store</h1>
 
 <%= render "shared/storeform", store: @store %>
