--- a/app/views/desks/new.html.erb
+++ b/app/views/desks/new.html.erb
@@ -1,2 +1,2 @@
-<h1>desks#new</h1>
+<h1 class="py-10 mt-12 font-mono text-5xl font-bold text-center">新增桌位</h1>
 <%= render "form", store: @store, desk: @desk %>
