search bar功能已上線 ,food路搜尋BUG待解決

--- a/app/views/menus/order_food.html.erb
+++ b/app/views/menus/order_food.html.erb
@@ -1,3 +1,5 @@
+<%= render "foodnavbar" %>
+
 <!------------- banner ---------------->
   <div id="carouselExampleCaptions" class="relative carousel slide" data-bs-ride="carousel">
 
