--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -26,10 +26,9 @@
       </nav>
       <div>
        <%# sreach bar build not finish %>
-        <%= search_form_for @q ,url: store_menus_path(@store) do |f| %>
-          <%= f.label :name %>
-          <%= f.search_field :name %>
-          <%= f.submit %>
+        <%= search_form_for @q , url: store_menus_path do |f| %>
+          <%= f.search_field :name_cont,placeholder:"Search....", class:"rounded-sm px-2 py-1"%>
+          <%= f.submit '搜尋', class: 'text-white py-1 px-5 bg-gray-500 rounded-sm'%>
         <% end %>
       </div>
     </div>
