--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -43,7 +43,7 @@
       <%= link_to '清空購物車', cart_path({serial_number: params[:serial_number]}), method: :delete, data: {confirm: "確定清空購物車？"} %>
     </button>
     <button class="px-6 py-2 mx-2 text-white transition-colors duration-200 transform bg-pink-500 rounded-md hover:bg-pink-700 focus:outline-none focus:bg-gray-600 hover:scale-105">
-      <%= link_to "結帳", orders_path({desk_id: @desk.id, items: current_cart.items}), method: "post" %>
+      <%= link_to "結帳", orders_path({desk_id: @desk.id, items: @items}), method: "post" %>
       $<%= current_cart.total_price %>
     </button>
 
