--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -19,11 +19,11 @@
         </tr>
       </thead>
       <tbody class="leading-10 text-center ">
-        <% current_cart.items.each do |item| %>
+        <% @items.each do |item| %>
         <tr>
-          <td><%= item.menu.name %></td>
-          <td><%= item.quantity %></td>
-          <td><%= item.menu.price %></td>
+          <td><%= item[:menu_id] %></td>
+          <td><%= item[:quantity] %></td>
+          <%# <td><%= item.menu.price %></td> %>
           <td><%= item.price %></td>
         </tr>
         <% end %>
