--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -65,7 +65,13 @@
 
         <div class="mt-8">
           <h2 class="font-semibold text-center text-gray-600 uppercase tracking-wide">Edit store</h2>
-          
+          <div class="mt-3">
+            <div
+              class="  py-1 px-2 text-md text-gray-700 font-medium hover:bg-gray-300 rounded-lg">
+              <%= link_to '新增商店', new_store_path%>
+            </div>
+          </div>
+
           <div class="mt-3">
             <div
               class="py-1 px-2 text-md text-gray-600 font-medium flex items-center hover:bg-gray-300 rounded-lg">
@@ -77,7 +83,6 @@
             <div
               class="py-1 px-2 text-md text-gray-600 font-medium flex items-center hover:bg-gray-300 rounded-lg">
               <%= link_to "使用者註冊" , user_session_path %>
-
             </div>
           </div>
 
