--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -48,29 +48,22 @@
         </div>
         
         <div class="mt-3">
-
-            <span class=" text-gray-700 py-2 px-2 text-md font-medium hover:bg-gray-300 rounded-lg">地址：<%= @store.address %>
-
-            </span>
+          <span class=" text-gray-700 py-2 px-2 text-md font-medium hover:bg-gray-300 rounded-lg">地址：  <%= @store.address %>
+          </span>
         </div>
         <div class="mt-3">
-          <div
-
-            class=" px-2 text-md font-medium flex flex-wrap items-center hover:bg-gray-300 rounded-lg">
-
+          <div class=" px-2 text-md font-medium flex flex-wrap items-center hover:bg-gray-300 rounded-lg">
             <span class="w-full text-gray-700 ">營業時間（起）：</span>
             <span class="w-full"><%= @store.business_hours_start %></span>
           </div>
         </div>
         <div class="mt-3">
-          <div
-
-            class=" px-2 text-md font-medium flex flex-wrap items-center hover:bg-gray-300 rounded-lg">
+          <div class=" px-2 text-md font-medium flex flex-wrap items-center hover:bg-gray-300 rounded-lg">
 
             <span class="w-full text-gray-700 ">營業時間（迄）：</span>
             <span class="w-full"><%= @store.business_hours_end %></span>
           </div>
-        </div
+        </div>
 
         <div class="mt-3">
           <button type="button" class="flex font-medium items-center w-full text-base font-normal text-gray-700 rounded-lg transition duration-75 group hover:bg-gray-300 dark:text-white dark:hover:bg-gray-700" aria-controls="dropdown-example" data-collapse-toggle="dropdown-example-1">
@@ -149,7 +142,7 @@
       </nav>
     </div>
 
-    <main class="w-full p-3 lg:p-5 grid grid-cols-1 items-center gap-1 text-sm xl:text-lg md:grid-cols-4 md:grid-rows-6 lg:grid-cols-6 lg:grid-rows-8 md:gap-3 bg-gray-200">
+    <main class="w-full p-3 lg:p-5 grid grid-cols-1 gap-1 text-sm xl:text-lg md:grid-cols-4 md:grid-rows-6 lg:grid-cols-6 lg:grid-rows-8 md:gap-3 bg-gray-200">
       <% @desks.each do |desk| %>
         <section class="w-full h-full box-border p-4 text-center md:rounded-lg bg-red-100 hover:bg-red-200 hover:scale-110" >
           <div>桌位：<%= desk.name %></div>
