add aasm serve event

--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -171,7 +171,7 @@
           </span>
           <span class="bg-yellow-100">
 
-            <%= link_to "QR" , store_desk_path(@store, desk.id) %>
+            <%= link_to "QRCode" , store_desk_path(@store, desk.id) %>
           </span>
         </section>
       <% end %>
