--- a/app/views/response/aaa.html.erb
+++ b/app/views/response/aaa.html.erb
@@ -1,4 +1,29 @@
-<h1>藍新資料</h1>
+<h1 class="py-10 mt-12 font-mono text-5xl font-bold text-center">交易結果</h1>
+<section class="max-w-4xl mx-auto bg-gray-100 rounded-md shadow-md dark:bg-gray-800">
+<div class="h-3 bg-green-400 rounded-t-md"></div>
 
-<span>總金額:<%= @re_hash[:Amt] %></span> 
-<span>訂單編號:<%= @order_no %></span>
+<table>
+    <thead>
+        <tr>
+            <td>訂單編號</td>
+            <td>商品名稱</td>
+            <td>交易結果</td>
+            <td>交易金額</td>
+            <td>付款時間</td>
+        </tr>
+    </thead>
+
+    <tbody>
+        <tr>
+            <td><%= @order_no %></td>
+            <td><%= @response_hash["ItemDesc"] %></td>
+            <td>交易成功(<%= @status %>)</td>
+            <td><%= @response_hash["Amt"] %></td>
+            <td><%= @response_hash["PayTime"] %></td>
+        </tr>
+    </tbody>
+
+
+</table>
+
+
