--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -154,12 +154,6 @@
       <% @desks.each do |desk| %>
         <section class="mt-auto box-border p-4 text-center md:rounded-lg bg-red-100 hover:bg-red-200 hover:scale-110" data-controller="update-order" data-update-order-desk-id-value="<%= desk.id %>">
           <div>桌位：<%= desk.name %></div>
-          <div>座位數量：<%= desk.seat_amount %></div>
-          <ul id="<%= dom_id desk %>">
-            <% desk.orders.each do |order| %>
-              <%= render "order", order: order %> 
-            <% end %>
-          </ul>
           <span class="bg-green-100" >
             <%= link_to "編輯" , edit_store_desk_path(@store, desk.id) %>
           </span>
@@ -170,9 +164,16 @@
             data: {confirm: "確定刪除？"} %>
           </span>
           <span class="bg-yellow-100">
-
             <%= link_to "QRCode" , store_desk_path(@store, desk.id) %>
           </span>
+          
+          <ul id="<%= dom_id desk %>">
+            <% order_sort(desk).each do |order| %>
+              <% if order.aasm_state != "served" %>
+                <%= render "order", order: order %> 
+              <% end %>
+            <% end %>
+          </ul>
         </section>
       <% end %>
 
