--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -1,62 +1,62 @@
-<div class="h-screen flex flex-col">
+<div class="flex flex-col h-screen">
   <header class="flex flex-shrink-0">
 
     <div class="flex-shrink-0 px-4 py-3 bg-gray-800 sm:w-3/12">
 
       <button class="flex items-center block w-full">
-        <img src="/photo/lutsjtdb.png" class="w-5 h-8 rounded-full mr-2 sm:h-10 w-10" alt="Flowbite Logo">
+        <img src="/photo/lutsjtdb.png" class="w-5 w-10 h-8 mr-2 rounded-full sm:h-10" alt="Flowbite Logo">
         <span class="ml-4 text-lg font-medium text-white">WeChef</span>
-        <svg class=" ml-auto h-6 w-6 ml-10 stroke-current text-gray-400" viewBox="0 0 24 24" fill="none">
+        <svg class="w-6 h-6 ml-10 ml-auto text-gray-400 stroke-current " viewBox="0 0 24 24" fill="none">
           <path d="M16 10l-4 4-4-4" stroke="4A5568" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
         </svg>
       </button>
     </div>
 
-    <div class="flex w-full bg-gray-700 px-3 md:px-6 items-center justify-between">
+    <div class="flex items-center justify-between w-full px-3 bg-gray-700 md:px-6">
       <nav class="hidden md:block">
         <div
-          class="hover:bg-gray-400 rounded-lg inline-block text-md font-medium text-white px-3 py-2 leading-none">
+          class="inline-block px-3 py-2 font-medium leading-none text-white rounded-lg hover:bg-gray-400 text-md">
           <%= link_to '關於我們',"#"%>
         </div>
         <div
-          class="ml-2 hover:bg-gray-400 rounded-lg inline-block text-md font-medium text-white px-3 py-2 leading-none">
+          class="inline-block px-3 py-2 ml-2 font-medium leading-none text-white rounded-lg hover:bg-gray-400 text-md">
           <%= link_to "聯絡我們","#" %>
 
         </div>
         <div
-          class="hover:bg-gray-400 rounded-lg inline-block text-md font-medium text-white px-3 py-2 leading-none">
+          class="inline-block px-3 py-2 font-medium leading-none text-white rounded-lg hover:bg-gray-400 text-md">
           <%= link_to "回首頁", root_path %>
         </div>
       </nav>
       <div>
         <input
-        class="focus:bg-white focus:text-gray-900 px-3  focus:placeholder-gray-600 md:px-4 py-2 leading-none bg-gray-900 rounded-lg text-sm placeholder-gray-400 text-white"
+        class="px-3 py-2 text-sm leading-none text-white placeholder-gray-400 bg-gray-900 rounded-lg focus:bg-white focus:text-gray-900 focus:placeholder-gray-600 md:px-4"
         placeholder="Search">
       </div>
     </div>
   </header>
 
   <div class="flex overflow-x-hidden">
-    <div class="sm:w-4/12 py-2 box-border bg-gray-100 overflow-y-auto hidden md:block">
+    <div class="box-border hidden py-2 overflow-y-auto bg-gray-100 sm:w-4/12 md:block">
       <nav>
-        <h2 class="w-full text-xl mb-2 text-center font-semibold text-gray-700 uppercase tracking-wide"><%= @store.name %></h2>
-        <h2 class="font-semibold text-md text-center text-gray-600 uppercase tracking-wide">Store Inf</h2>
+        <h2 class="w-full mb-2 text-xl font-semibold tracking-wide text-center text-gray-700 uppercase"><%= @store.name %></h2>
+        <h2 class="font-semibold tracking-wide text-center text-gray-600 uppercase text-md">Store Inf</h2>
         <div class="mt-3">
-          <span class=" text-gray-700 py-2 px-2 text-md font-medium hover:bg-gray-300 rounded-lg">電話：<%= @store.tel %>
+          <span class="px-2 py-2 font-medium text-gray-700 rounded-lg  text-md hover:bg-gray-300">電話：<%= @store.tel %>
 
           </span>
         </div>
         
         <div class="mt-3">
 
-            <span class=" text-gray-700 py-2 px-2 text-md font-medium hover:bg-gray-300 rounded-lg">地址：<%= @store.address %>
+            <span class="px-2 py-2 font-medium text-gray-700 rounded-lg  text-md hover:bg-gray-300">地址：<%= @store.address %>
 
             </span>
         </div>
         <div class="mt-3">
           <div
 
-            class=" px-2 text-md font-medium flex flex-wrap items-center hover:bg-gray-300 rounded-lg">
+            class="flex flex-wrap items-center px-2 font-medium rounded-lg  text-md hover:bg-gray-300">
 
             <span class="w-full text-gray-700 ">營業時間（起）：</span>
             <span class="w-full"><%= @store.business_hours_start %></span>
@@ -65,16 +65,16 @@
         <div class="mt-3">
           <div
 
-            class=" px-2 text-md font-medium flex flex-wrap items-center hover:bg-gray-300 rounded-lg">
+            class="flex flex-wrap items-center px-2 font-medium rounded-lg  text-md hover:bg-gray-300">
 
             <span class="w-full text-gray-700 ">營業時間（迄）：</span>
             <span class="w-full"><%= @store.business_hours_end %></span>
           </div>
-        </div
+        </div>
 
         <div class="mt-3">
-          <button type="button" class="flex font-medium items-center w-full text-base font-normal text-gray-700 rounded-lg transition duration-75 group hover:bg-gray-300 dark:text-white dark:hover:bg-gray-700" aria-controls="dropdown-example" data-collapse-toggle="dropdown-example-1">
-            <span class="flex-1 text-left p-2 whitespace-nowrap" sidebar-toggle-item>單店頁面</span>
+          <button type="button" class="flex items-center w-full text-base font-normal font-medium text-gray-700 transition duration-75 rounded-lg group hover:bg-gray-300 dark:text-white dark:hover:bg-gray-700" aria-controls="dropdown-example" data-collapse-toggle="dropdown-example-1">
+            <span class="flex-1 p-2 text-left whitespace-nowrap" sidebar-toggle-item>單店頁面</span>
             <svg sidebar-toggle-item class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd">
               </path>
@@ -92,55 +92,55 @@
           </ul>
         </div>
         <div class="mt-8">
-          <h2 class="font-semibold text-center text-gray-600 uppercase tracking-wide">Create Element</h2>
+          <h2 class="font-semibold tracking-wide text-center text-gray-600 uppercase">Create Element</h2>
           <div class="mt-3">
             <div
-              class="py-1 px-2 text-md text-gray-700 font-medium flex items-center hover:bg-gray-300 rounded-lg">
+              class="flex items-center px-2 py-1 font-medium text-gray-700 rounded-lg text-md hover:bg-gray-300">
               <%= link_to "新增桌位" , new_store_desk_path(@store) %>
             </div>
           </div>
 
           <div class="mt-3">
             <div
-              class="  py-1 px-2 text-md text-gray-700 font-medium hover:bg-gray-300 rounded-lg">
+              class="px-2 py-1 font-medium text-gray-700 rounded-lg  text-md hover:bg-gray-300">
               <%= link_to '新增商店', new_store_path%>
             </div>
           </div>
 
           <div class="mt-3">
             <div 
-              class="  py-1 px-2 text-md text-gray-700 font-medium hover:bg-gray-300 rounded-lg">
+              class="px-2 py-1 font-medium text-gray-700 rounded-lg  text-md hover:bg-gray-300">
               <%= link_to "新增分類",new_store_classification_path(@store) %>
             </div>
           </div>
 
           <div class="mt-3">
             <div 
-              class="py-1 px-2 text-md text-gray-700 font-medium hover:bg-gray-300 rounded-lg">
+              class="px-2 py-1 font-medium text-gray-700 rounded-lg text-md hover:bg-gray-300">
               <%= link_to "新增菜單", new_store_menu_path(@store) %>
             </div>
           </div>
         </div>
         <div class="mt-8">
-          <h2 class="font-semibold text-center text-gray-600 uppercase tracking-wide">User Edit</h2>
+          <h2 class="font-semibold tracking-wide text-center text-gray-600 uppercase">User Edit</h2>
           
           <div class="mt-3">
             <div
-              class="py-1 px-2 text-md text-gray-600 font-medium flex items-center hover:bg-gray-300 rounded-lg">
+              class="flex items-center px-2 py-1 font-medium text-gray-600 rounded-lg text-md hover:bg-gray-300">
               <%= link_to "修改使用者資料" , edit_user_registration_path%>
             </div>
           </div>
 
           <div class="mt-3">
             <div
-              class="py-1 px-2 text-md text-gray-600 font-medium flex items-center hover:bg-gray-300 rounded-lg">
+              class="flex items-center px-2 py-1 font-medium text-gray-600 rounded-lg text-md hover:bg-gray-300">
               <%= link_to "使用者註冊" , user_session_path %>
             </div>
           </div>
 
           <div class="mt-3">
             <div
-              class="py-1 px-2 text-md text-red-600 font-medium flex items-center hover:bg-gray-300 rounded-lg">
+              class="flex items-center px-2 py-1 font-medium text-red-600 rounded-lg text-md hover:bg-gray-300">
               <%= link_to "使用者登出" , destroy_user_session_path , method: 'DELETE' , data:{confirm: "Are you sure? "} %>
             </div>
 
@@ -149,15 +149,15 @@
       </nav>
     </div>
 
-    <main class="w-full p-3 lg:p-5 grid grid-cols-1 items-center gap-1 text-sm xl:text-lg md:grid-cols-4 md:grid-rows-6 lg:grid-cols-6 lg:grid-rows-8 md:gap-3 bg-gray-200">
+    <main class="grid items-center w-full grid-cols-1 gap-1 p-3 text-sm bg-gray-200 lg:p-5 xl:text-lg md:grid-cols-4 md:grid-rows-6 lg:grid-cols-6 lg:grid-rows-8 md:gap-3">
       <% @desks.each do |desk| %>
-        <section class="w-full h-full box-border p-4 text-center md:rounded-lg bg-red-100 hover:bg-red-200 hover:scale-110" >
+        <section class="box-border w-full h-full p-4 text-center bg-red-100 md:rounded-lg hover:bg-red-200 hover:scale-110" >
           <div>桌位：<%= desk.name %></div>
           <div>座位數量：<%= desk.seat_amount %></div>
           <span class="bg-green-100" >
             <%= link_to "編輯" , edit_store_desk_path(@store, desk.id) %>
           </span>
-          <span class="bg-blue-100 mx-2">
+          <span class="mx-2 bg-blue-100">
             <%= link_to "刪除" , 
             store_desk_path(@store, desk.id), 
             method: "delete" , 
