--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -1,28 +1,26 @@
-<div class=" max-h-screen box-boreder">
+<div class="max-h-screen box-boreder">
   <header class="flex flex-shrink-0">
     <div class="flex-shrink-0 px-4 py-3 bg-gray-800 sm:w-3/12">
       <button class="flex items-center block w-full">
-        <img src="/photo/lutsjtdb.png" class="w-5 h-8 rounded-full mr-2 sm:h-10 w-10" alt="Flowbite Logo">
+        <img src="/photo/lutsjtdb.png" class="w-5 w-10 h-8 mr-2 rounded-full sm:h-10" alt="Flowbite Logo">
         <span class="ml-4 text-lg font-medium text-white">WeChef</span>
-        <svg class=" ml-auto h-6 w-6 ml-10 stroke-current text-gray-400" viewBox="0 0 24 24" fill="none">
+        <svg class="w-6 h-6 ml-10 ml-auto text-gray-400 stroke-current " viewBox="0 0 24 24" fill="none">
           <path d="M16 10l-4 4-4-4" stroke="4A5568" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
         </svg>
       </button>
     </div>
-    <div class="flex w-full bg-gray-700 px-3 md:px-6 items-center justify-between">
+    <div class="flex items-center justify-between w-full px-3 bg-gray-700 md:px-6">
       <nav class="hidden md:block">
         <div
-          class="hover:bg-gray-400 rounded-lg inline-block text-md font-medium text-white px-3 py-2 leading-none">
+          class="inline-block px-3 py-2 font-medium leading-none text-white rounded-lg hover:bg-gray-400 text-md">
           <%= link_to '關於我們',"#"%>
         </div>
         <div
-          class="ml-2 hover:bg-gray-400 rounded-lg inline-block text-md font-medium text-white px-3 py-2 leading-none">
+          class="inline-block px-3 py-2 ml-2 font-medium leading-none text-white rounded-lg hover:bg-gray-400 text-md">
           <%= link_to "聯絡我們","#" %>
         </div>
         <div
-
-          class="hover:bg-gray-400 rounded-lg  inline-block text-md font-medium text-white px-3 py-2 leading-none">
-
+          class="inline-block px-3 py-2 font-medium leading-none text-white rounded-lg hover:bg-gray-400 text-md">
           <%= link_to "回首頁", root_path %>
         </div>
       </nav>
@@ -36,42 +34,50 @@
       </div>
     </div>
   </header>
-  <div class="flex overflow-x-hidden h-screen">
-    <div class="sm:w-4/12 py-2 box-border bg-gray-100 overflow-y-auto hidden md:block">
+  <div class="flex h-screen overflow-x-hidden">
+    <div class="box-border hidden py-2 overflow-y-auto bg-gray-100 sm:w-4/12 md:block">
       <nav>
-       <h2 class="w-full text-xl mb-2 text-center font-semibold text-gray-700 uppercase tracking-wide"><%= current_user.nickname %></h2>
-        <h2 class="font-semibold text-md text-center text-gray-600 uppercase tracking-wide">Store Inf</h2>
+       <h2 class="w-full mb-2 text-xl font-semibold tracking-wide text-center text-gray-700 uppercase"><%= current_user.nickname %></h2>
+        <h2 class="font-semibold tracking-wide text-center text-gray-600 uppercase text-md">Store Inf</h2>
         
         <div class="mt-3">
-          <span class=" text-gray-700 py-2 px-2 text-md font-medium flex items-center justify-between hover:bg-gray-300 rounded-lg">電話：
+          <span class="flex items-center justify-between px-2 py-2 font-medium text-gray-700 rounded-lg text-md hover:bg-gray-300">電話：
           </span>
         </div>
         
           <div class="mt-3">
-            <span class=" text-gray-700 py-2 px-2 text-md font-medium flex items-center justify-between hover:bg-gray-300 rounded-lg">地址：
+            <span class="flex items-center justify-between px-2 py-2 font-medium text-gray-700 rounded-lg text-md hover:bg-gray-300">地址：
             </span>
         </div>
 
         <div class="mt-3">
           <div
-            class=" px-2 text-md font-medium flex flex-wrap items-center hover:bg-gray-300 rounded-lg">
+            class="flex flex-wrap items-center px-2 font-medium rounded-lg text-md hover:bg-gray-300">
             <span class="w-full text-gray-700 ">營業時間（起）：</span>
           </div>
         </div>
 
         <div class="mt-3">
           <div
-            class=" px-2 text-md font-medium flex flex-wrap items-center hover:bg-gray-300 rounded-lg">
+            class="flex flex-wrap items-center px-2 font-medium rounded-lg text-md hover:bg-gray-300">
             <span class="w-full text-gray-700 ">營業時間（迄）：</span>
           </div>
         </div>
 
         <div class="mt-8">
-          <h2 class="font-semibold text-center text-gray-600 uppercase tracking-wide">Edit store</h2>
-          
+          <h2 class="font-semibold tracking-wide text-center text-gray-600 uppercase">Edit store</h2>
+
+
           <div class="mt-3">
             <div
-              class="py-1 px-2 text-md text-gray-600 font-medium flex items-center hover:bg-gray-300 rounded-lg">
+              class="px-2 py-1 font-medium text-gray-700 rounded-lg text-md hover:bg-gray-300">
+              <%= link_to '新增商店', new_store_path%>
+            </div>
+          </div>
+
+          <div class="mt-3">
+            <div
+              class="flex items-center px-2 py-1 font-medium text-gray-600 rounded-lg text-md hover:bg-gray-300">
               <%= link_to "修改使用者資料" , edit_user_registration_path%>
 
             </div>
@@ -79,7 +85,7 @@
 
           <div class="mt-3">
             <div
-              class="py-1 px-2 text-md text-gray-600 font-medium flex items-center hover:bg-gray-300 rounded-lg">
+              class="flex items-center px-2 py-1 font-medium text-gray-600 rounded-lg text-md hover:bg-gray-300">
               <%= link_to "使用者註冊" , user_session_path %>
 
             </div>
@@ -87,15 +93,14 @@
 
           <div class="mt-3">
             <div
-
-              class="py-1 px-2 text-md text-red-600 font-medium flex items-center hover:bg-gray-300 rounded-lg">
+              class="flex items-center px-2 py-1 font-medium text-red-600 rounded-lg text-md hover:bg-gray-300">
               <%= link_to "使用者登出" , destroy_user_session_path , method: 'DELETE' , data:{confirm: "Are you sure? "} %>
             </div>
           </div>
         </div>
       </nav>
     </div>
-    <main class="w-full items-center text-sm xl:text-lg  bg-gray-200">
+    <main class="items-center w-full text-sm bg-gray-200 xl:text-lg">
      <table class="block min-w-full border-collapse sm:table">
         <thead class="block sm:table-header-group">
           <tr class="absolute block border border-red-300 sm:border-none sm:table-row -top-full sm:top-auto -left-full sm:left-auto sm:relative ">
@@ -111,8 +116,7 @@
         </thead>
         <tbody class="block sm:table-row-group">
           <% @stores.each do |store| %>
-           
-            <tr class="block content-around justify-self-start bg-gray-300 border border-grey-500 sm:border-none sm:table-row">
+            <tr class="content-around block bg-gray-300 border justify-self-start border-grey-500 sm:border-none sm:table-row">
 
 
 
@@ -132,14 +136,14 @@
                 <p class="text-center"><%= store.tel %></p>
               </td>
 
-              <td class=" p-2 sm:hidden sm:border sm:border-grey-500 sm:table-cell">
+              <td class="p-2 sm:hidden sm:border sm:border-grey-500 sm:table-cell">
                 <span class="mx-2 font-bold justify-self-end sm:hidden">Actions:</span>
      
               </td>
 
 
               <td class="p-2 sm: sm:border sm:border-grey-500 sm:table-cell">
-                <span class="mx-2 justify-self-end font-bold sm:hidden">Update:</span>
+                <span class="mx-2 font-bold justify-self-end sm:hidden">Update:</span>
                 <div class="text-center">
                   <div>
                     <button class="px-2 py-1 font-bold text-gray-100 bg-blue-400 rounded-md hover:bg-blue-500">
