store_編輯功能修正以完成

--- a/app/views/classifications/index.html.erb
+++ b/app/views/classifications/index.html.erb
@@ -53,7 +53,7 @@
           <div
             class=" px-2 text-md font-medium flex flex-wrap items-center hover:bg-gray-300 rounded-lg">
             <span class="w-full text-gray-700 ">營業時間（起）：</span>
-            <span class="w-full"><%= @store.business_hours_start %></span>
+            <span class="w-full"><%= @store.business_start %></span>
           </div>
         </div>
         <div class="mt-3">
