--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -61,7 +61,7 @@
             class="flex flex-wrap items-center px-2 font-medium rounded-lg text-md hover:bg-gray-300">
 
             <span class="w-full text-gray-700 ">營業時間（起）：</span>
-            <span class="w-full"><%= @store.business_hours_start %></span>
+            <span class="w-full"><%= @store.business_start %></span>
           </div>
         </div>
         <div class="mt-3">
@@ -69,7 +69,7 @@
 
             class="flex flex-wrap items-center px-2 font-medium rounded-lg  text-md hover:bg-gray-300">
             <span class="w-full text-gray-700 ">營業時間（迄）：</span>
-            <span class="w-full"><%= @store.business_hours_end %></span>
+            <span class="w-full"><%= @store.business_end %></span>
           </div>
         </div>
 
