--- a/app/views/shared/_storeform.html.erb
+++ b/app/views/shared/_storeform.html.erb
@@ -15,13 +15,13 @@
           </div>
 
           <div>
-            <%= f.label :business_hours_start ,'開始營業時間' ,class:"text-block dark:text-gray-200" %>
-            <%= f.datetime_field :business_hours_start ,class:"block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500 dark:focus:border-blue-500 focus:outline-none focus:ring"%>
+            <%= f.label :business_start ,'開始營業時間' ,class:"text-block dark:text-gray-200" %>
+            <%= f.datetime_field :business_start ,class:"block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500 dark:focus:border-blue-500 focus:outline-none focus:ring"%>
           </div>
           
           <div>
-            <%= f.label :business_hours_end ,'結束營業時間' ,class:"text-block dark:text-gray-200" %>
-            <%= f.datetime_field :business_hours_start ,class:"block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500 dark:focus:border-blue-500 focus:outline-none focus:ring"%>
+            <%= f.label :business_end ,'結束營業時間' ,class:"text-block dark:text-gray-200" %>
+            <%= f.datetime_field :business_end ,class:"block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500 dark:focus:border-blue-500 focus:outline-none focus:ring"%>
           </div>
 
           <div>
