order_menu / menu new 分類功能

--- a/app/views/classifications/_form.html.erb
+++ b/app/views/classifications/_form.html.erb
@@ -10,11 +10,11 @@
         
         <div class="flex justify-end mt-6">
           <div class="flex items-center px-6 mx-2 text-white transition-colors duration-200 transform bg-pink-500 rounded-md hover:bg-pink-700 focus:outline-none focus:bg-gray-600 hover:scale-105">
-            <%= link_to 'Back Classification' ,store_classifications_path %>
+            <%= link_to '回分類' ,store_classifications_path %>
           </div>
 
           <div class="flex items-center px-6 mx-2 text-white transition-colors duration-200 transform bg-pink-500 rounded-md hover:bg-pink-700 focus:outline-none focus:bg-gray-600 hover:scale-105">
-            <%= f.submit 'Add Classification'%>
+            <%= f.submit '新增分類'%>
           </div>
         </div>
       </div>
