--- a/app/views/desks/_form.html.erb
+++ b/app/views/desks/_form.html.erb
@@ -13,7 +13,7 @@
             <%= f.number_field :seat_amount, min: 1, class:"px-4 py-2 mt-2 text-center text-gray-700 bg-white border border-gray-300 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500 dark:focus:border-blue-500 focus:outline-none focus:ring" %>
         </div>
         <div class="flex items-center px-6 mx-2 text-white transition-colors duration-200 transform bg-pink-500 rounded-md hover:bg-pink-700 focus:outline-none focus:bg-gray-600 hover:scale-105">
-            <%= f.submit %>
+            <%= f.submit '新增座位' %>
         </div>
     </div>
 
