--- a/app/views/shared/_menuform.html.erb
+++ b/app/views/shared/_menuform.html.erb
@@ -17,15 +17,10 @@
               <div>
                 <div>
                   <%= f.label :classification_id, "分類" ,class:"text-block dark:text-gray-200"%>
-                  <%= f.select :classification_id, Classification.all.map{ |c| [c.name, c.id] }%>
+                  <%= f.select :classification_id, @store.classifications.map{ |c| [c.name, c.id] }%>
                    
                 </div>
                 <select  class="block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500 dark:focus:border-blue-500 focus:outline-none focus:ring">
-                    <option> 美式 </option>
-                    <option> 美式 </option>
-                    <option> 美式 </option>
-                    <option> 美式 </option>
-                    <option> 美式 </option>
                 </select>
                 
               </div>
@@ -39,8 +34,8 @@
                 <%= f.text_area :note ,class:"block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500 dark:focus:border-blue-500 focus:outline-none focus:ring" %>
               </div>
               <div class="flex justify-end mt-6">
-                <%= f.submit 'Back Menu' , class:"px-6 py-2 mx-2 text-white transition-colors duration-200 transform bg-pink-500 rounded-md hover:bg-pink-700 focus:outline-none focus:bg-gray-600"%>
-                <%= f.submit 'Add Menu' , class:"px-6 py-2 mx-2 text-white transition-colors duration-200 transform bg-pink-500 rounded-md hover:bg-pink-700 focus:outline-none focus:bg-gray-600"%>
+                <%= f.submit '回菜單' , class:"px-6 py-2 mx-2 text-white transition-colors duration-200 transform bg-pink-500 rounded-md hover:bg-pink-700 focus:outline-none focus:bg-gray-600"%>
+                <%= f.submit '新增菜單' , class:"px-6 py-2 mx-2 text-white transition-colors duration-200 transform bg-pink-500 rounded-md hover:bg-pink-700 focus:outline-none focus:bg-gray-600"%>
               </div>
             </div>
           <% end %>
