--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+
 <h1 class="py-10 font-mono text-5xl font-bold text-center">Sign up</h1>
 
 <section class="max-w-xl mx-auto bg-gray-100 rounded-md shadow-md dark:bg-gray-800">
@@ -6,7 +7,7 @@
     <%= render "devise/shared/error_messages", resource: resource %>
     <div class=" p-6 grid grid-cols-1 gap-6 mt-4 sm:grid-cols-1">
       <div class="field">
-        <%= f.label :"Nick Name" ,class:"text-block dark:text-gray-200" %><br />
+        <%= f.label :"暱稱" ,class:"text-block dark:text-gray-200" %><br />
         <%= f.text_field :nickname, autofocus: true, autocomplete: "nickname" ,class:"block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500 dark:focus:border-blue-500 focus:outline-none focus:ring"%>
       </div>
 
