--- a/app/views/devise/shared/_links.html copy.erb
+++ b/app/views/devise/shared/_links.html copy.erb
@@ -2,6 +2,18 @@
   <%= link_to "", new_session_path(resource_name) %><br />
 <% end %>
 
+<%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+  <%= link_to "註冊", new_registration_path(resource_name) %><br />
+<% end %>
+
+<%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
+  <%= link_to "忘記密碼？", new_password_path(resource_name) %><br />
+<% end %>
+
+<%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
+  <%= link_to "重寄確認信", new_user_confirmation_path(resource_name),class:'font-mono font-bold' %><br />
+<% end %>
+
 <%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
   <%= link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name) %><br />
 <% end %>
