--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -1,72 +1,64 @@
 
 <div class=" max-h-screen box-boreder">
   <header class="flex flex-shrink-0">
-    <div class="flex-shrink-0 px-4 py-3 bg-gray-800 sm:w-3/12">
-      <button class="flex items-center block w-full">
-        <img src="/photo/lutsjtdb.png" class="w-5 h-8 rounded-full mr-2 sm:h-10 w-10" alt="Flowbite Logo">
-        <span class="ml-4 text-lg font-medium text-white">WeChef</span>
-        <svg class=" ml-auto h-6 w-6 ml-10 stroke-current text-gray-400" viewBox="0 0 24 24" fill="none">
-          <path d="M16 10l-4 4-4-4" stroke="4A5568" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-        </svg>
-      </button>
-    </div>
-    <div class="flex w-full bg-gray-700 px-3 md:px-6 items-center justify-between">
-      <nav class="hidden md:block">
-        <div
-          class="hover:bg-gray-400 rounded-lg inline-block text-md font-medium text-white px-3 py-2 leading-none">
-          <%= link_to '關於我們',"#"%>
-
+    <div class="flex items-center justify-between w-full p-3 bg-maingray md:px-6">
+      <nav class="flex">
+        <button class="flex items-center mx-auto w-48 h-7 mr-4">
+          <img src="/photo/wechef-logo-nbg.png" class="mr-2" alt="Flowbite Logo" style="aspect-ratio:auto">
+        </button>
+        <div class="inline-block">
+          <%= link_to '關於我們' ,"#" ,class:"px-3 py-2 font-medium leading-none text-white rounded-lg hover:bg-gray-400
+            text-md"%>
         </div>
-        <div
-          class="ml-2 hover:bg-gray-400 rounded-lg inline-block text-md font-medium text-white px-3 py-2 leading-none">
-          <%= link_to "聯絡我們","#" %>
+        <div class="inline-block">
+          <%= link_to "聯絡我們" ,"#" ,class:"px-3 py-2 font-medium leading-none text-white rounded-lg hover:bg-gray-400
+            text-md"%>
         </div>
-        <div
-          class="hover:bg-gray-400 rounded-lg inline-block text-md font-medium text-white px-3 py-2 leading-none">
-          <%= link_to "回首頁", root_path %>
+        <div class="inline-block">
+          <%= link_to "回首頁" , root_path ,class:"px-3 py-2 font-medium leading-none text-white rounded-lg
+            hover:bg-gray-400 text-md"%>
         </div>
       </nav>
-      <div>
-       <%# sreach bar build not finish %>
-
-        <%= search_form_for @q , url: store_menus_path do |f| %>
-          <%= f.search_field :name_cont,placeholder:"Search....", class:"rounded-sm px-2 py-1"%>
-          <%= f.submit '搜尋', class: 'text-white py-1 px-5 bg-gray-500 rounded-sm'%>
-
-        <% end %>
-      </div>
+      <%= search_form_for @q , url: store_menus_path do |f| %>
+        <%= f.search_field :name_cont,placeholder:"Search....", class:"rounded-sm px-2 py-1"%>
+        <%= f.submit '搜尋', class: 'text-white py-1 px-5 bg-gray-500 rounded-sm'%>
+      <% end %>
     </div>
+
+
+
   </header>
   <div class="flex overflow-x-hidden h-screen">
-    <div class="sm:w-4/12 py-2 box-border bg-gray-100 overflow-y-auto hidden lg:block">
+   <div class="w-1/5 bg-gray-100 ">
       <nav>
-       <h2 class="w-full text-xl mb-2 text-center font-semibold text-gray-700 uppercase tracking-wide"><%= @store.name %></h2>
-        <h2 class="font-semibold text-md text-center text-gray-600 uppercase tracking-wide">Store Inf</h2>
-        <div class="mt-3">
-          <span class=" text-gray-700 py-2 px-2 text-md font-medium flex items-center justify-between hover:bg-gray-300 rounded-lg">電話：<%= @store.tel %>
-          </span>
-        </div>
-        
-        <div class="mt-3">
-            <span class=" text-gray-700 py-2 px-2 text-md font-medium flex items-center justify-between hover:bg-gray-300 rounded-lg">地址：<%= @store.address %>
-            </span>
-        </div>
-        <div class="mt-3">
-          <div
-            class=" px-2 text-md font-medium flex flex-wrap items-center hover:bg-gray-300 rounded-lg">
-            <span class="w-full text-gray-700 ">營業時間（起）：</span>
-            <span class="w-full"><%= @store.business_start %></span>
-          </div>
-        </div>
-        <div class="mt-3">
-          <div
-            class=" px-2 text-md font-medium flex flex-wrap items-center hover:bg-gray-300 rounded-lg">
-            <span class="w-full text-gray-700 ">營業時間（迄）：</span>
-            <span class="w-full"><%= @store.business_end %></span>
-          </div>
-        </div>
+        <h2 class="w-full my-4 text-xl font-semibold tracking-wide text-center text-gray-700 uppercase">
+         <%= @store.name %>
+        </h2>
+        <h2 class="font-semibold tracking-wide text-center text-gray-600 uppercase text-md">Store Inf</h2>
 
-        <div class="mt-3">
+          <div class="mb-1">
+            <span class="flex items-center px-2 py-1 font-medium text-gray-700 rounded-lg
+            text-md hover:bg-gray-300">電話：<%= @store.tel %>
+          </div>
+
+          <div class="mb-1">
+            <span class="flex items-center px-2 py-1 font-medium text-gray-700 rounded-lg
+            text-md hover:bg-gray-300">地址：<%= @store.address %>
+          </div>
+
+          <div class="mb-1 flex flex-col items-start px-2 py-1 font-medium text-gray-700 rounded-lg
+            text-md">
+            <span>營業時間（起）： </span>
+            <span><%= @store.business_start %> </span>
+          </div>
+
+          <div class="mb-1 flex flex-col items-start px-2 py-1 font-medium text-gray-700 rounded-lg
+            text-md">
+            <span>營業時間（迄）： </span>
+            <span><%= @store.business_end %> </span>
+          </div>
+          
+        <div class="mb-1">
           <button type="button" class="flex font-medium items-center w-full text-base font-normal text-gray-700 rounded-lg transition duration-75 group hover:bg-gray-300 dark:text-white dark:hover:bg-gray-700" aria-controls="dropdown-example" data-collapse-toggle="dropdown-example-1">
             <span class="flex-1 text-left p-2 whitespace-nowrap" sidebar-toggle-item>單店頁面</span>
             <svg sidebar-toggle-item class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
@@ -76,99 +68,89 @@
           </button>
           <ul id="dropdown-example-1" class="hidden py-2 space-y-2">
             <li>
-                <div class="flex items-center"><%= link_to "點餐頁面",store_menus_path(@store) ,class:'p-2 pl-11 w-full text-base font-normal text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-300 dark:text-white dark:hover:bg-gray-700'%>
-                </div>
+              <div class="flex items-center">
+              <%= link_to "點餐頁面",store_menus_path(@store) ,class:'p-2 pl-11 w-full text-base font-normal text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-300 dark:text-white dark:hover:bg-gray-700'%>
+              </div>
             </li>
             <li>
-                <div class="flex"><%= link_to "分類頁面",store_classifications_path(@store) ,class:'p-2 pl-11 w-full text-base font-normal text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-300 dark:text-white dark:hover:bg-gray-700'%>
-                </div>
+              <div class="flex">
+              <%= link_to "分類頁面",store_classifications_path(@store) ,class:'p-2 pl-11 w-full text-base font-normal text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-300 dark:text-white dark:hover:bg-gray-700'%>
+              </div>
             </li>
           </ul>
         </div>
-        
+        <hr>
+
         <div class="mt-8">
-          <h2 class="font-semibold text-center text-gray-600 uppercase tracking-wide">Create Element</h2>
-          <div class="mt-3">
-            <div
-              class="py-1 px-2 text-md text-gray-700 font-medium flex items-center hover:bg-gray-300 rounded-lg">
-              <%= link_to "新增桌位" , new_store_desk_path(@store) %>
-            </div>
-          </div>
-
-          <div class="mt-3">
-            <div
-              class="  py-1 px-2 text-md text-gray-700 font-medium hover:bg-gray-300 rounded-lg">
-              <%= link_to '新增商店', new_store_path%>
-            </div>
-          </div>
-
-          <div class="mt-3">
-            <div 
-              class="  py-1 px-2 text-md text-gray-700 font-medium hover:bg-gray-300 rounded-lg">
-              <%= link_to "新增分類",new_store_classification_path(@store) %>
-            </div>
-          </div>
-
-          <div class="mt-3">
-            <div 
-              class="py-1 px-2 text-md text-gray-700 font-medium hover:bg-gray-300 rounded-lg">
-              <%= link_to "新增菜單", new_store_menu_path(@store) %>
-            </div>
-          </div>
+          <h2 class="font-semibold text-center text-gray-600 uppercase tracking-wide">新增</h2>
+              <div class="mb-1">
+          <button type="button" class="flex font-medium items-center w-full text-base font-normal text-gray-700 rounded-lg transition duration-75 group hover:bg-gray-300 dark:text-white dark:hover:bg-gray-700" aria-controls="dropdown-example" data-collapse-toggle="dropdown-example-2">
+            <span class="flex-1 text-left p-2 whitespace-nowrap" sidebar-toggle-item>單店頁面</span>
+            <svg sidebar-toggle-item class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd">
+              </path>
+            </svg>
+          </button>
+          <ul id="dropdown-example-2" class="hidden py-2 space-y-2">
+            <li>
+              <div class="flex">
+              <%= link_to "新增菜單", new_store_menu_path(@store) ,class:'p-2 pl-11 w-full text-base font-normal text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-300 dark:text-white dark:hover:bg-gray-700'%>
+              </div>
+            </li>
+            <li>
+              <div class="flex items-center">
+              <%= link_to "新增桌位" , new_store_desk_path(@store) ,class:'p-2 pl-11 w-full text-base font-normal text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-300 dark:text-white dark:hover:bg-gray-700'%>
+              </div>
+            </li>
+            <li>
+              <div class="flex">
+              <%= link_to '新增商店', new_store_path ,class:'p-2 pl-11 w-full text-base font-normal text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-300 dark:text-white dark:hover:bg-gray-700'%>
+              </div>
+            </li>
+            <li>
+              <div class="flex">
+              <%= link_to "新增分類",new_store_classification_path(@store) ,class:'p-2 pl-11 w-full text-base font-normal text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-300 dark:text-white dark:hover:bg-gray-700'%>
+              </div>
+            </li>
+          </ul>
+        </div>
         </div>
 
-
-        <div class="mt-8">
-          <h2 class="font-semibold text-center text-gray-600 uppercase tracking-wide">Edit store</h2>
-          
-          <div class="mt-3">
-            <div
-              class="py-1 px-2 text-md text-gray-600 font-medium flex items-center hover:bg-gray-300 rounded-lg">
-              <%= link_to "修改使用者資料" , edit_user_registration_path%>
-            </div>
+        <div class="mb-1">
+          <h2 class="font-semibold tracking-wide text-center text-gray-600 uppercase">Edit store</h2>
+          <div class="mb-1">
+            <%= link_to "修改使用者資料" , edit_user_registration_path , class:"flex items-center px-2 py-1 font-medium
+              text-gray-700 rounded-lg text-md hover:bg-gray-300"%>
           </div>
-
-          <div class="mt-3">
-            <div
-              class="py-1 px-2 text-md text-gray-600 font-medium flex items-center hover:bg-gray-300 rounded-lg">
-              <%= link_to "使用者註冊" , user_session_path %>
-
-            </div>
+          <div class="mb-1">
+            <%= link_to "使用者登出" , destroy_user_session_path , method: 'DELETE' , data:{confirm: "Are you sure? "
+              },class:"flex text-red-600 items-center px-2 py-1 font-medium text-gray-600 rounded-lg text-md hover:bg-gray-300" %>
           </div>
-
-          <div class="mt-3">
-            <div
-
-              class="py-1 px-2 text-md text-red-600 font-medium flex items-center hover:bg-gray-300 rounded-lg">
-              <%= link_to "使用者登出" , destroy_user_session_path , method: 'DELETE' , data:{confirm: "Are you sure? "} %>
-            </div>
-          </div>
-
         </div>
       </nav>
     </div>
     <main class="w-full box-border items-start content-start bg-gray-200 p-2 grid grid-cols-4 lg:grid-cols-5 gap-4 h-full">
-        <% @menus.each do |menu| %>
-          <div class="rounded-lg w-full">
-            <button class="object-cover w-full overflow-hidden max-h-40 rounded-t-md align-bottom" style="aspect-ratio: 1 / 4 ;">
-              <%= image_tag menu.image_resize("200x200") ,class:'w-full h-full'%>
-            </button>
-            <div class="bg-white rounded-b-md p-2">
-              <div class="text-sm lg:text-md"><%= menu.name %></div>
-              <span>＄<%= menu.price %></span>
-              <div class="flex justify-end">
-                <button class="transition
-                        text-white duration-200 ease-in-out bg-pccific p-1 mx-1 rounded-md hover:bg-red-400">
-                        <%= link_to '編輯' , edit_store_menu_path(@store , menu)%>
-                </button>
-                <button class="transition 
-                        text-white duration-200 ease-in-out bg-pccific p-1 mx-1 rounded-md hover:bg-red-400">
-                        <%= link_to '刪除' , store_menu_path(@store, menu) , method:'DELETE' , data:{confirm:"確認刪除？"}%>
-                </button>
-              </div>
+      <% @menus.each do |menu| %>
+        <div class="rounded-lg w-full">
+          <button class="object-cover w-full overflow-hidden max-h-40 rounded-t-md align-bottom" style="aspect-ratio: 1 / 4 ;">
+            <%= image_tag menu.image_resize("200x200") ,class:'w-full h-full'%>
+          </button>
+          <div class="bg-white rounded-b-md p-2">
+            <div class="text-sm lg:text-md"><%= menu.name %></div>
+            <span>＄<%= menu.price %></span>
+            <div class="flex justify-end">
+              <button class="transition
+                      text-white duration-200 ease-in-out bg-pccific p-1 mx-1 rounded-md hover:bg-red-400">
+                      <%= link_to '編輯' , edit_store_menu_path(@store , menu)%>
+              </button>
+              <button class="transition 
+                      text-white duration-200 ease-in-out bg-pccific p-1 mx-1 rounded-md hover:bg-red-400">
+                      <%= link_to '刪除' , store_menu_path(@store, menu) , method:'DELETE' , data:{confirm:"確認刪除？"}%>
+              </button>
             </div>
           </div>
-        <% end %>
+        </div>
+      <% end %>
     </main>
   </div>
 </div>
