--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -1,159 +1,116 @@
 <div class="max-h-screen box-boreder">
   <header class="flex flex-shrink-0">
-    <div class="flex-shrink-0 px-4 py-3 bg-gray-800 sm:w-3/12">
-      <button class="flex items-center block w-full">
-        <img src="/photo/lutsjtdb.png" class="w-5 w-10 h-8 mr-2 rounded-full sm:h-10" alt="Flowbite Logo">
-        <span class="ml-4 text-lg font-medium text-white">WeChef</span>
-        <svg class="w-6 h-6 ml-10 ml-auto text-gray-400 stroke-current " viewBox="0 0 24 24" fill="none">
-          <path d="M16 10l-4 4-4-4" stroke="4A5568" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-        </svg>
-      </button>
-    </div>
-    <div class="flex items-center justify-between w-full px-3 bg-gray-700 md:px-6">
-      <nav class="hidden md:block">
-        <div
-          class="inline-block px-3 py-2 font-medium leading-none text-white rounded-lg hover:bg-gray-400 text-md">
-          <%= link_to '關於我們',"#"%>
+    <div class="flex items-center justify-between w-full p-3 bg-maingray md:px-6">
+      <nav class="flex">
+        <button class="flex items-center mx-auto w-48 h-7 mr-4">
+          <img src="/photo/wechef-logo-nbg.png" class="mr-2" alt="Flowbite Logo" style="aspect-ratio:auto">
+        </button>
+        <div class="inline-block">
+          <%= link_to '關於我們' ,"#" ,class:"px-3 py-2 font-medium leading-none text-white rounded-lg hover:bg-gray-400
+            text-md"%>
         </div>
-        <div
-          class="inline-block px-3 py-2 ml-2 font-medium leading-none text-white rounded-lg hover:bg-gray-400 text-md">
-          <%= link_to "聯絡我們","#" %>
+        <div class="inline-block">
+          <%= link_to "聯絡我們" ,"#" ,class:"px-3 py-2 font-medium leading-none text-white rounded-lg hover:bg-gray-400
+            text-md"%>
         </div>
-        <div
-          class="inline-block px-3 py-2 font-medium leading-none text-white rounded-lg hover:bg-gray-400 text-md">
-          <%= link_to "回首頁", root_path %>
+        <div class="inline-block">
+          <%= link_to "回首頁" , root_path ,class:"px-3 py-2 font-medium leading-none text-white rounded-lg
+            hover:bg-gray-400 text-md"%>
         </div>
       </nav>
       <div>
-
         <%= search_form_for @q do |f| %>
           <%= f.search_field :name_cont ,placeholder:"Search....", class:"rounded-sm px-2 py-1" %>
-          <%= f.submit '搜尋', class: 'text-white py-1 px-5 bg-gray-500 rounded-md' %>
+          <%= f.submit '搜尋' , class: 'text-white py-1 px-5 bg-gray-500 rounded-md' %>
         <% end %>
-
       </div>
     </div>
   </header>
-  <div class="flex h-screen overflow-x-hidden">
-    <div class="box-border hidden py-2 overflow-y-auto bg-gray-100 sm:w-4/12 md:block">
+  <div class="flex min-h-screen overflow-x-hidden">
+    <div class="w-1/5 bg-gray-100 ">
       <nav>
-       <h2 class="w-full mb-2 text-xl font-semibold tracking-wide text-center text-gray-700 uppercase"><%= current_user.nickname %></h2>
+        <h2 class="w-full mb-2 text-xl font-semibold tracking-wide text-center text-gray-700 uppercase">
+          <%= current_user.nickname %>
+        </h2>
         <h2 class="font-semibold tracking-wide text-center text-gray-600 uppercase text-md">Store Inf</h2>
-        
-        <div class="mt-3">
-          <span class="flex items-center justify-between px-2 py-2 font-medium text-gray-700 rounded-lg text-md hover:bg-gray-300">電話：
-          </span>
-        </div>
-        
-          <div class="mt-3">
-            <span class="flex items-center justify-between px-2 py-2 font-medium text-gray-700 rounded-lg text-md hover:bg-gray-300">地址：
-            </span>
-        </div>
-
-        <div class="mt-3">
-          <div
-            class="flex flex-wrap items-center px-2 font-medium rounded-lg text-md hover:bg-gray-300">
-            <span class="w-full text-gray-700 ">營業時間（起）：</span>
+          <div class="mb-1">
+            <%= link_to '新增商店' , new_store_path ,class:"flex items-center px-2 py-1 font-medium text-gray-700 rounded-lg
+              text-md hover:bg-gray-300"%>
           </div>
-        </div>
-
-        <div class="mt-3">
-          <div
-            class="flex flex-wrap items-center px-2 font-medium rounded-lg text-md hover:bg-gray-300">
-            <span class="w-full text-gray-700 ">營業時間（迄）：</span>
-          </div>
-        </div>
-
-        <div class="mt-8">
+        <div class="mb-1">
           <h2 class="font-semibold tracking-wide text-center text-gray-600 uppercase">Edit store</h2>
-
-
-          <div class="mt-3">
-            <div
-              class="px-2 py-1 font-medium text-gray-700 rounded-lg text-md hover:bg-gray-300">
-              <%= link_to '新增商店', new_store_path%>
-            </div>
+          <div class="mb-1">
+            <%= link_to "修改使用者資料" , edit_user_registration_path , class:"flex items-center px-2 py-1 font-medium
+              text-gray-700 rounded-lg text-md hover:bg-gray-300"%>
           </div>
-
-          <div class="mt-3">
-            <div
-              class="flex items-center px-2 py-1 font-medium text-gray-600 rounded-lg text-md hover:bg-gray-300">
-              <%= link_to "修改使用者資料" , edit_user_registration_path%>
-
-            </div>
+          <div class="mb-1">
+            <%= link_to "使用者註冊" , user_session_path ,class:"flex items-center px-2 py-1 font-medium text-gray-600
+              rounded-lg text-md hover:bg-gray-300"%>
           </div>
-
-          <div class="mt-3">
-            <div
-              class="flex items-center px-2 py-1 font-medium text-gray-600 rounded-lg text-md hover:bg-gray-300">
-              <%= link_to "使用者註冊" , user_session_path %>
-
-            </div>
-          </div>
-
-          <div class="mt-3">
-            <div
-              class="flex items-center px-2 py-1 font-medium text-red-600 rounded-lg text-md hover:bg-gray-300">
-              <%= link_to "使用者登出" , destroy_user_session_path , method: 'DELETE' , data:{confirm: "Are you sure? "} %>
-            </div>
+          <div class="mb-1">
+            <%= link_to "使用者登出" , destroy_user_session_path , method: 'DELETE' , data:{confirm: "Are you sure? "
+              },class:"flex text-red-600 items-center px-2 py-1 font-medium text-gray-600 rounded-lg text-md hover:bg-gray-300" %>
           </div>
         </div>
       </nav>
     </div>
     <main class="items-center w-full text-sm bg-gray-200 xl:text-lg">
-     <table class="block min-w-full border-collapse sm:table">
-        <thead class="block sm:table-header-group">
-          <tr class="absolute block border border-red-300 sm:border-none sm:table-row -top-full sm:top-auto -left-full sm:left-auto sm:relative ">
-            <th class="block p-2 font-bold text-center text-white bg-gray-600 sm:border sm:border-grey-500 sm:table-cell">商店名稱
-              </th>
-            <th class="block p-2 font-bold text-center text-white bg-gray-600 sm:border sm:border-grey-500 sm:table-cell">商店地址
-              </th>
-            <th class="block p-2 font-bold text-center text-white bg-gray-600 sm:border sm:border-grey-500 sm:table-cell">商店電話
-              </th>
-            <th class="block p-2 font-bold text-center text-white bg-gray-600 sm:border sm:border-grey-500 sm:table-cell">Actions
-            </th>
+      <table class=" min-w-full border-collpse table">
+        <thead>
+          <tr class="bg-gray-200 text-gray-600 uppercase text-base  leading-normal">
+            <th class="py-3 px-6 text-center">商店名稱</th>
+            <th class="py-3 px-6 text-center">商店地址</th>
+            <th class="py-3 px-6 text-center">商店電話</th>
+            <th class="py-3 px-6 text-center">商店設定</th>
           </tr>
         </thead>
         <tbody class="block sm:table-row-group">
           <% @stores.each do |store| %>
-            <tr class="content-around block bg-gray-300 border justify-self-start border-grey-500 sm:border-none sm:table-row">
+            <tr
+              class="content-around bg-gray-300 text-gray-600 text-sm border border-grey-600 sborder-none table-row">
+              <td class="py-3 px-6 text-center borde bg-maingray">
+                <div class="flex items-center text-base text-gray-50 font-bold justify-center">
+                  <img class="w-6 h-6 mr-2 rounded-full" src="https://randomuser.me/api/portraits/men/1.jpg" />
+                  <span>
+                    <%= link_to store.name, store_path(store.id) %>
+                  </span>
+                </div>
+              </td>
 
+              <td class="p-2 border border-grey-500 ">
+                <p class="text-center">
+                  <%= store.address %>
+                </p>
+              </td>
 
-
-              <td class="grid grid-cols-2 p-2 sm:border sm:border-grey-500 sm:table-cell">
-                <p class="text-center"><%= link_to store.name, store_path(store.id) %></p>
+              <td class="p-2 borde ">
+                <p class="text-center">
+                  <%= store.tel %>
+                </p>
               </td>
 
 
-              <td class="grid grid-cols-2 p-2 sm:border sm:border-grey-500 sm:table-cell">
-                <p class="text-center"><%= store.address %></p>
-              </td>
+              <td class="py-3 px-6 text-center border">
+                <div class="flex item-center justify-center">
+                  <button class="w-4 mr-2 transform hover:scale-110">
+                    <a href="<%= edit_store_path(id: store.id) %>">
+                      <img src="/photo/8675035_ic_fluent_edit_regular_icon.png" alt="" >
+                    </a>
+                  </button>
 
-              <td class="grid grid-cols-2 p-2 sm:border sm:border-grey-500 sm:table-cell">
-                <p class="text-center"><%= store.tel %></p>
-              </td>
+                  <button class="w-4 mr-2 transform hover:scale-110">
+                    <a href="<%= store_path(id: store.id) %>">
+                      <img src="/photo/4781812_bin_delete_file_garbage_recycle_icon.png" alt="" >
+                    </a>
+                  </button>
 
-              <td class="p-2 sm:hidden sm:border sm:border-grey-500 sm:table-cell">
-                <span class="mx-2 font-bold justify-self-end sm:hidden">Actions:</span>
-     
-              </td>
-
-
-              <td class="p-2 sm: sm:border sm:border-grey-500 sm:table-cell">
-                <span class="mx-2 font-bold justify-self-end sm:hidden">Update:</span>
-                <div class="text-center">
-                  <div>
-                    <button class="px-2 py-1 font-bold text-gray-100 bg-blue-400 rounded-md hover:bg-blue-500">
-                      <%= link_to "編輯" , edit_store_path(id: store.id) %>
-                    </button>
-                    <button class="px-2 py-1 font-bold text-gray-100 bg-red-400 rounded-md hover:bg-red-500">
+                  <button class="px-2 py-1 font-bold text-gray-100 bg-red-400 rounded-md hover:bg-red-500">
                       <%= link_to "刪除" , store_path(id: store.id), method: "delete" , data: {confirm: "確定刪除？" } %>
                     </button>
-                  </div>
                 </div>
               </td>
             </tr>
-          <% end %>
+            <% end %>
         </tbody>
       </table>
     </main>
