--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -1,4 +1,3 @@
-
 <div class=" max-h-screen box-boreder">
   <header class="flex flex-shrink-0">
     <div class="flex items-center justify-between w-full p-3 bg-maingray md:px-6">
@@ -21,60 +20,73 @@
       </nav>
       <%= search_form_for @q , url: store_menus_path do |f| %>
         <%= f.search_field :name_cont,placeholder:"Search....", class:"rounded-sm px-2 py-1"%>
-        <%= f.submit '搜尋', class: 'text-white py-1 px-5 bg-gray-500 rounded-sm'%>
-      <% end %>
+          <%= f.submit '搜尋' , class: 'text-white py-1 px-5 bg-gray-500 rounded-sm' %>
+            <% end %>
     </div>
 
 
 
   </header>
   <div class="flex overflow-x-hidden h-screen">
-   <div class="w-1/5 bg-gray-100 ">
+    <div class="w-1/5 bg-gray-100 ">
       <nav>
         <h2 class="w-full my-4 text-xl font-semibold tracking-wide text-center text-gray-700 uppercase">
-         <%= @store.name %>
+          <%= @store.name %>
         </h2>
         <h2 class="font-semibold tracking-wide text-center text-gray-600 uppercase text-md">Store Inf</h2>
 
-          <div class="mb-1">
-            <span class="flex items-center px-2 py-1 font-medium text-gray-700 rounded-lg
-            text-md hover:bg-gray-300">電話：<%= @store.tel %>
-          </div>
-
-          <div class="mb-1">
-            <span class="flex items-center px-2 py-1 font-medium text-gray-700 rounded-lg
-            text-md hover:bg-gray-300">地址：<%= @store.address %>
-          </div>
-
-          <div class="mb-1 flex flex-col items-start px-2 py-1 font-medium text-gray-700 rounded-lg
-            text-md">
-            <span>營業時間（起）： </span>
-            <span><%= @store.business_start %> </span>
-          </div>
-
-          <div class="mb-1 flex flex-col items-start px-2 py-1 font-medium text-gray-700 rounded-lg
-            text-md">
-            <span>營業時間（迄）： </span>
-            <span><%= @store.business_end %> </span>
-          </div>
-          
         <div class="mb-1">
-          <button type="button" class="flex font-medium items-center w-full text-base font-normal text-gray-700 rounded-lg transition duration-75 group hover:bg-gray-300 dark:text-white dark:hover:bg-gray-700" aria-controls="dropdown-example" data-collapse-toggle="dropdown-example-1">
+          <span class="flex items-center px-2 py-1 font-medium text-gray-700 rounded-lg
+            text-md hover:bg-gray-300">電話：<%= @store.tel %>
+        </div>
+
+        <div class="mb-1">
+          <span class="flex items-center px-2 py-1 font-medium text-gray-700 rounded-lg
+            text-md hover:bg-gray-300">地址：<%= @store.address %>
+        </div>
+
+        <div class="mb-1 flex flex-col items-start px-2 py-1 font-medium text-gray-700 rounded-lg
+            text-md">
+          <span>營業時間（起）： </span>
+          <span>
+            <%= @store.business_start %>
+          </span>
+        </div>
+
+        <div class="mb-1 flex flex-col items-start px-2 py-1 font-medium text-gray-700 rounded-lg
+            text-md">
+          <span>營業時間（迄）： </span>
+          <span>
+            <%= @store.business_end %>
+          </span>
+        </div>
+
+        <div class="mb-1">
+          <button type="button"
+            class="flex font-medium items-center w-full text-base font-normal text-gray-700 rounded-lg transition duration-75 group hover:bg-gray-300 dark:text-white dark:hover:bg-gray-700"
+            aria-controls="dropdown-example" data-collapse-toggle="dropdown-example-1">
             <span class="flex-1 text-left p-2 whitespace-nowrap" sidebar-toggle-item>單店頁面</span>
-            <svg sidebar-toggle-item class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-              <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd">
+            <svg sidebar-toggle-item class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20"
+              xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd"
+                d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
+                clip-rule="evenodd">
               </path>
             </svg>
           </button>
           <ul id="dropdown-example-1" class="hidden py-2 space-y-2">
             <li>
               <div class="flex items-center">
-              <%= link_to "點餐頁面",store_menus_path(@store) ,class:'p-2 pl-11 w-full text-base font-normal text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-300 dark:text-white dark:hover:bg-gray-700'%>
+                <%= link_to "點餐頁面" ,store_menus_path(@store) ,class:'p-2 pl-11 w-full text-base font-normal
+                  text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-300 dark:text-white
+                  dark:hover:bg-gray-700'%>
               </div>
             </li>
             <li>
               <div class="flex">
-              <%= link_to "分類頁面",store_classifications_path(@store) ,class:'p-2 pl-11 w-full text-base font-normal text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-300 dark:text-white dark:hover:bg-gray-700'%>
+                <%= link_to "分類頁面" ,store_classifications_path(@store) ,class:'p-2 pl-11 w-full text-base font-normal
+                  text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-300 dark:text-white
+                  dark:hover:bg-gray-700'%>
               </div>
             </li>
           </ul>
@@ -83,37 +95,49 @@
 
         <div class="mt-8">
           <h2 class="font-semibold text-center text-gray-600 uppercase tracking-wide">新增</h2>
-              <div class="mb-1">
-          <button type="button" class="flex font-medium items-center w-full text-base font-normal text-gray-700 rounded-lg transition duration-75 group hover:bg-gray-300 dark:text-white dark:hover:bg-gray-700" aria-controls="dropdown-example" data-collapse-toggle="dropdown-example-2">
-            <span class="flex-1 text-left p-2 whitespace-nowrap" sidebar-toggle-item>單店頁面</span>
-            <svg sidebar-toggle-item class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-              <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd">
-              </path>
-            </svg>
-          </button>
-          <ul id="dropdown-example-2" class="hidden py-2 space-y-2">
-            <li>
-              <div class="flex">
-              <%= link_to "新增菜單", new_store_menu_path(@store) ,class:'p-2 pl-11 w-full text-base font-normal text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-300 dark:text-white dark:hover:bg-gray-700'%>
-              </div>
-            </li>
-            <li>
-              <div class="flex items-center">
-              <%= link_to "新增桌位" , new_store_desk_path(@store) ,class:'p-2 pl-11 w-full text-base font-normal text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-300 dark:text-white dark:hover:bg-gray-700'%>
-              </div>
-            </li>
-            <li>
-              <div class="flex">
-              <%= link_to '新增商店', new_store_path ,class:'p-2 pl-11 w-full text-base font-normal text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-300 dark:text-white dark:hover:bg-gray-700'%>
-              </div>
-            </li>
-            <li>
-              <div class="flex">
-              <%= link_to "新增分類",new_store_classification_path(@store) ,class:'p-2 pl-11 w-full text-base font-normal text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-300 dark:text-white dark:hover:bg-gray-700'%>
-              </div>
-            </li>
-          </ul>
-        </div>
+          <div class="mb-1">
+            <button type="button"
+              class="flex font-medium items-center w-full text-base font-normal text-gray-700 rounded-lg transition duration-75 group hover:bg-gray-300 dark:text-white dark:hover:bg-gray-700"
+              aria-controls="dropdown-example" data-collapse-toggle="dropdown-example-2">
+              <span class="flex-1 text-left p-2 whitespace-nowrap" sidebar-toggle-item>單店頁面</span>
+              <svg sidebar-toggle-item class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20"
+                xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd"
+                  d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
+                  clip-rule="evenodd">
+                </path>
+              </svg>
+            </button>
+            <ul id="dropdown-example-2" class="hidden py-2 space-y-2">
+              <li>
+                <div class="flex">
+                  <%= link_to "新增菜單" , new_store_menu_path(@store) ,class:'p-2 pl-11 w-full text-base font-normal
+                    text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-300 dark:text-white
+                    dark:hover:bg-gray-700'%>
+                </div>
+              </li>
+              <li>
+                <div class="flex items-center">
+                  <%= link_to "新增桌位" , new_store_desk_path(@store) ,class:'p-2 pl-11 w-full text-base font-normal
+                    text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-300 dark:text-white
+                    dark:hover:bg-gray-700'%>
+                </div>
+              </li>
+              <li>
+                <div class="flex">
+                  <%= link_to '新增商店' , new_store_path ,class:'p-2 pl-11 w-full text-base font-normal text-gray-900
+                    rounded-lg transition duration-75 group hover:bg-gray-300 dark:text-white dark:hover:bg-gray-700'%>
+                </div>
+              </li>
+              <li>
+                <div class="flex">
+                  <%= link_to "新增分類" ,new_store_classification_path(@store) ,class:'p-2 pl-11 w-full text-base
+                    font-normal text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-300 dark:text-white
+                    dark:hover:bg-gray-700'%>
+                </div>
+              </li>
+            </ul>
+          </div>
         </div>
 
         <div class="mb-1">
@@ -124,28 +148,35 @@
           </div>
           <div class="mb-1">
             <%= link_to "使用者登出" , destroy_user_session_path , method: 'DELETE' , data:{confirm: "Are you sure? "
-              },class:"flex text-red-600 items-center px-2 py-1 font-medium text-gray-600 rounded-lg text-md hover:bg-gray-300" %>
+              },class:"flex text-red-600 items-center px-2 py-1 font-medium text-gray-600 rounded-lg text-md
+              hover:bg-gray-300" %>
           </div>
         </div>
       </nav>
     </div>
-    <main class="w-full box-border items-start content-start bg-gray-200 p-2 grid grid-cols-4 lg:grid-cols-5 gap-4 h-full">
+    <main
+      class="w-full box-border items-start content-start bg-gray-200 p-2 grid grid-cols-4 lg:grid-cols-5 gap-4 h-full">
       <% @menus.each do |menu| %>
         <div class="rounded-lg w-full">
-          <button class="object-cover w-full overflow-hidden max-h-40 rounded-t-md align-bottom" style="aspect-ratio: 1 / 4 ;">
-            <%= image_tag menu.image_resize("200x200") ,class:'w-full h-full'%>
+          <button class="object-cover w-full overflow-hidden max-h-40 rounded-t-md align-bottom"
+            style="aspect-ratio: 1 / 4 ;">
+            <% if menu.avatar.attached? %>
+              <%= image_tag menu.avatar ,class:'object-cover w-full h-full' %>
+            <% end %>
           </button>
           <div class="bg-white rounded-b-md p-2">
-            <div class="text-sm lg:text-md"><%= menu.name %></div>
+            <div class="text-sm lg:text-md">
+              <%= menu.name %>
+            </div>
             <span>＄<%= menu.price %></span>
             <div class="flex justify-end">
               <button class="transition
                       text-white duration-200 ease-in-out bg-pccific p-1 mx-1 rounded-md hover:bg-red-400">
-                      <%= link_to '編輯' , edit_store_menu_path(@store , menu)%>
+                <%= link_to '編輯' , edit_store_menu_path(@store , menu)%>
               </button>
               <button class="transition 
                       text-white duration-200 ease-in-out bg-pccific p-1 mx-1 rounded-md hover:bg-red-400">
-                      <%= link_to '刪除' , store_menu_path(@store, menu) , method:'DELETE' , data:{confirm:"確認刪除？"}%>
+                <%= link_to '刪除' , store_menu_path(@store, menu) , method:'DELETE' , data:{confirm:"確認刪除？"}%>
               </button>
             </div>
           </div>
@@ -154,6 +185,3 @@
     </main>
   </div>
 </div>
-
-
-
