--- a/app/views/shared/_menuform.html.erb
+++ b/app/views/shared/_menuform.html.erb
@@ -1,42 +1,49 @@
+<section class="max-w-4xl mx-auto bg-gray-100 rounded-md shadow-md dark:bg-gray-800">
+  <div class="h-3 bg-green-400 rounded-t-md"></div>
+  <h1 class="text-xl px-6 pt-6 font-bold capitalize text-block dark:text-block">店家菜單新增頁面</h1>
+  <%= form_with( model: [ store , menu ] ) do |f| %>
+    <div class="grid grid-cols-1 gap-6 px-6 pb-6 mt-4 sm:grid-cols-2">
+      <div>
+        <%= f.label :name ,'菜名' ,class:"text-block dark:text-gray-200" %>
+        <%= f.text_field :name ,class:"block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300
+          rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500
+          dark:focus:border-blue-500 focus:outline-none focus:ring"%>
+      </div>
 
-      <section class="max-w-4xl mx-auto bg-gray-100 rounded-md shadow-md dark:bg-gray-800">
-      <div class="h-3 bg-green-400 rounded-t-md"></div>
-        <h1 class="text-xl px-6 pt-6 font-bold capitalize text-block dark:text-block">店家菜單新增頁面</h1>
-          <%= form_with( model: [ store , menu ] ) do |f| %>
-            <div class="grid grid-cols-1 gap-6 px-6 pb-6 mt-4 sm:grid-cols-2">
-              <div>
-                <%= f.label :name ,'菜名' ,class:"text-block dark:text-gray-200" %>
-                <%= f.text_field :name ,class:"block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500 dark:focus:border-blue-500 focus:outline-none focus:ring"%>
-              </div>
-              
-              <div>
-                <%= f.label :price ,'單價' ,class:"text-block dark:text-gray-200"%>
-                <%= f.number_field :price ,class:"block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500 dark:focus:border-blue-500 focus:outline-none focus:ring"%>
-              </div>
-              
-              <div>
-                <div>
-                  <%= f.label :classification_id, "分類" ,class:"text-block dark:text-gray-200"%>
-                  <%= f.select :classification_id, store.classifications.map{ |c| [c.name, c.id] }%>
-                   
-                </div>
-                <select  class="block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500 dark:focus:border-blue-500 focus:outline-none focus:ring">
-                </select>
-                
-              </div>
-  
-              <div>
-                <%= f.label :photo ,"商品圖片" ,class:"text-block dark:text-gray-200"%>
-                <%= f.file_field :photo , class:"w-full mt-2 py-2 leading-5 text-block transition-colors duration-200 transform rounded-md focus:outline-none focus:bg-gray-600 " %> 
-              </div>
-              <div>
-                <%= f.label :note ,'備註' , class:"text-block dark:text-gray-200"%>
-                <%= f.text_area :note ,class:"block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500 dark:focus:border-blue-500 focus:outline-none focus:ring" %>
-              </div>
-              <div class="flex justify-end mt-6">
-                <%= f.submit '回菜單' , class:"px-6 py-2 mx-2 text-white transition-colors duration-200 transform bg-pink-500 rounded-md hover:bg-pink-700 focus:outline-none focus:bg-gray-600"%>
-                <%= f.submit '新增菜單' , class:"px-6 py-2 mx-2 text-white transition-colors duration-200 transform bg-pink-500 rounded-md hover:bg-pink-700 focus:outline-none focus:bg-gray-600"%>
-              </div>
-            </div>
-          <% end %>
-      </section>
+      <div>
+        <%= f.label :price ,'單價' ,class:"text-block dark:text-gray-200"%>
+        <%= f.number_field :price ,class:"block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300
+          rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500
+          dark:focus:border-blue-500 focus:outline-none focus:ring"%>
+      </div>
+
+      <div>
+        <div>
+          <%= f.label :classification_id, "分類" ,class:"text-block dark:text-gray-200"%>
+            <%= f.select :classification_id, store.classifications.map{ |c| [c.name, c.id] }%>
+        </div>
+        <select
+          class="block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500 dark:focus:border-blue-500 focus:outline-none focus:ring">
+        </select>
+      </div>
+
+      <div>
+        <%= f.label :avatar ,"商品圖片" ,class:"text-block dark:text-gray-200"%>
+        <%= f.file_field :avatar , class:"w-full mt-2 py-2 leading-5 text-block transition-colors duration-200
+        transform rounded-md focus:outline-none focus:bg-gray-600 " %> 
+      </div>
+      <div>
+        <%= f.label :note ,'備註' , class:" text-block dark:text-gray-200"%>
+        <%= f.text_area :note ,class:"block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300
+        rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500
+        dark:focus:border-blue-500 focus:outline-none focus:ring" %>
+      </div>
+      <div class="flex justify-end mt-6">
+        <%= f.submit '回菜單' , class:"px-6 py-2 mx-2 text-white transition-colors duration-200 transform bg-pink-500
+        rounded-md hover:bg-pink-700 focus:outline-none focus:bg-gray-600"%>
+        <%= f.submit '新增菜單' , class:"px-6 py-2 mx-2 text-white transition-colors duration-200 transform bg-pink-500
+        rounded-md hover:bg-pink-700 focus:outline-none focus:bg-gray-600"%>
+      </div>
+    </div>
+    <% end %>
+</section>
